# spf3

./: CHANGELOG  README.md  setup.cfg  spf.py
.github/workflows/: ci.yaml
