[metadata]
name = spf3
version = 2.0.16
description = SPF (Sender Policy Framework) implemented in Python.
long_description = file: README.md
long_description_content_type = text/markdown
author = Terence Way
author_email = terry@wayforward.net
maintainer = Nikita Karamov
maintainer_email = me@kytta.dev
url = https://github.com/kytta/spf3/
license = Python Software Foundation License
keywords =
    spf
    email
    forgery
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: No Input/Output (Daemon)
    Intended Audience :: Developers
    License :: OSI Approved :: Python Software Foundation License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Communications :: Email :: Mail Transport Agents
    Topic :: Communications :: Email :: Filters
    Topic :: Internet :: Name Service (DNS)
    Topic :: Software Development :: Libraries :: Python Modules

[options]
py_modules = spf
scripts =
    type99.py
    spfquery.py
include_package_data = True
zip_safe = False
python_requires = >=2.7
install_requires =
    authres
    ipaddr; python_version<"3"

[options.extras_require]
dnspython =
    dnspython>=1.16.0
pydns =
    PyDNS; python_version<"3"
    Py3DNS; python_version>="3"
